--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,8 @@ venv.bak/
 .spyderproject
 .spyproject
 
+
+data/
 # Rope project settings
 .ropeproject
 
@@ -127,3 +129,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+data/
+*.json
